# provider_vision_old

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  COPYING  Dockerfile  LICENSE  README.md  dump.yaml  filter.h  global_param_handler.h  package.xml  parameter.h  test.yaml  test_file
.github/workflows/: docker-image-robot-develop.yml  docker-image-robot-feature.yml  docker-image-robot-master.yml
algorithm/: ai_trainer.cpp  ai_trainer.h  bin.cpp  bin.h  feature_factory.cpp  feature_vec.h  features.h  general_function.h  image_accumulator_buffer.h  line.cpp  major_edge_extractor.h  moments.h  object_frame_memory.h  object_full_data.cpp  object_full_data.h  object_ranker.h  object_ranking_data.cpp  object_tracking_data.h  rot_rect.cpp  target.h  time.cpp  time.h
cfg/: Camera.cfg  Camera_Parameters_.cfg  camera_dynamic_reconf.cfg
config/: camera_feed.fc  simple_buoy.fc  simple_buoy_green.fc  simple_delorean_far_bache.fc  simple_fence.fc  simple_torpedoes_handle.fc  simple_track.fc  test_filter.fc  torpedoes.fc
config/camera/: 26_ab_cloudy.yaml  camera_calibration.yaml  camera_config.xml  camera_config_piscine_cvm.yaml  camera_config_transdec_nuage.yaml  camera_config_transdec_soleil.yaml  camera_parameters.yaml  h_inn_25_night.yaml  provider_media_conf.yaml
config/filterchain/: auv6_mission_test_filterchain.xml  auv6_mission_test_filterchain.yaml  camera_feed.yaml  image_feed.xml  middle_pipe.xml  middle_pipe.yaml  object_feature_output.xml  object_feature_output.yaml  simple_buoy.yaml  simple_buoy_green.yaml  simple_buoy_red.xml  simple_buoy_red.yaml  simple_buoy_yellow.yaml  simple_delorean.xml  simple_delorean.yaml  simple_delorean_far.xml  simple_delorean_far.yaml  simple_delorean_far_bache.yaml  simple_delorean_near.fc  simple_delorean_near.yaml  simple_delorean_near_bache.xml  simple_delorean_near_bache.yaml  simple_fence.yaml  simple_fence_big.fc  simple_fence_big.yaml  simple_pipe.fc  simple_pipe.xml  simple_pipe.yaml  simple_torpedoes_handle.yaml  simple_track.yaml  simple_train.xml  simple_train.yaml  torpedoes_big.xml  torpedoes_big.yaml
docs/: README.md  ROS Interface.md  ros.md
docs/media/: camera_configuration.md  configuration_handler.md  media_streamer.md
docs/media/camera/: base_camera.md
docs/proc/: detection_task.md  filterchain.md
docs/server/: detection_task_manager.md  filterchain_manager.md  media_manager.md  vision_server.md
filters/: dilate.h  erode.h  fence_detector.h  hough_line.h  in_range.h  morphology.h  object_finder.h  original_image.h  pipe_detector.h  rotate.h  schar_adding.h  scharr.h  sobel.h  torpedoes_detector.h
launch/: patch.yaml  provider_vision.launch  provider_vision_bag2_jpeg.launch  provider_vision_local.launch  unit_test.launch  vision_server.launch
msg/: filterchain_return_message.msg  image_feed.msg  log.msg
parameters/: boolean_parameter.h  double_parameter.h  integer_parameter.h
scripts/: GetWhiteBalanceValues.sh  VisionServerAdapter.py  VisionServerDescriptor.py  cameras_runner.py  convert.sh  media_param.sh  target_simulator.py  testLogger.py  test_provider_vision.sh  unit_test.py
scripts/Util/: logger.py
src/: config.h  main.cpp
src/lib_vision/: filter.h  filter_factory.cc  filter_factory.cpp  filter_factory.h  filter_inl.h  global_param_handler.h  parameter.h  parameter_inl.h  parameter_interface.h  ranged_parameter.h  target.cc  target.h
src/media/: cam_camera_dc1394.cpp  cam_camera_dc1394.h  cam_config.cpp  cam_config.h  cam_driver.cpp  cam_driver.h  cam_driver_dc1394.cpp  cam_driver_dc1394.h  cam_driver_media.cpp  cam_driver_media.h  cam_driver_webcam.cpp  cam_driver_webcam.h  cam_undistord_matrices.cpp  cam_undistord_matrices.h  cam_webcam.cpp  cam_webcam.h  camera.h  camera_configuration.cpp  camera_configuration.h  configuration_handler.cpp  configuration_handler.h  image_file.h  media.h  media_image.cpp  media_image.h  media_streamer.cpp  media_streamer.h  media_video.cpp  media_video.h  video_file.cpp  webcam.cpp
src/proc/: detection_task.cpp  detection_task.h  filterchain.cpp  filterchain.h
src/provider_vision/: config.h  main.cc  main.cpp  parameter_center.cc  pugiconfig.h  pugixml.cc  pugixml.h
src/ros/: ros_callback_manager.h  ros_image_subscriber.cpp  ros_image_subscriber.h  ros_image_topic.cpp  ros_image_topic.h  ros_manager.cpp  ros_manager.h  ros_result_topic.cpp  ros_result_topic.h
src/server/: acquisition_loop.cpp  acquisition_loop.h  camera_manager.cpp  camera_manager.h  execution.cpp  execution.h  filterchain.cpp  filterchain_manager.cpp  filterchain_manager.h  media_manager.cpp  media_manager.h  vision_server.cpp  vision_server.h
src/utils/: camera_id.cpp  camera_id.h  constants.h  pugixml.cpp  serializable.h  yuv.h
srv/: get_available_camera.srv  get_camera_feature.srv  get_media_param_list.srv  set_camera_feature.srv  start_stop_media.srv  vision_server_execute_cmd.srv  vision_server_get_media_param.srv  vision_server_set_filterchain_filter_param.srv  vision_server_set_media_param.srv
test/: CMakeLists.txt  ai_trainer_test.cc  behavior_test.cc  camera_xml_config.xml  camera_xml_config_2.xml  configuration_handler_test.cc  contour_test.cc  detection_task_manager_test.cc  feature_factory_test.cc  feature_vec_test.cc  filterchain_manager_test.cc  front_guppy_calibration.xml  major_edge_extractor_test.cc  media_manager_test.cc  object_basic_data_test.cc  object_frame_memory_test.cc  object_full_data_test.cc  object_ranker_test.cc  object_ranking_data_test.cc  object_tracking_data_test.cc  performace_evaluator_test.cc  scharr_test.cc  vision_server_test.cc
test/filters/: contour_test.cc  feature_factory_test.cc  object_basic_data_test.cc  object_frame_memory_test.cc  object_full_data_test.cc  object_ranker_test.cc  object_ranking_data_test.cc  object_tracking_data_test.cc  performace_evaluator_test.cc
test/server/: camera_calibration_test.cc  configuration_handler_test.cc  detection_task_manager_test.cc  filterchain_manager_test.cc  light_calibration_algorithm_test.cc  media_manager_test.cc  media_param_test.cc  vision_server_test.cc
(+286 files in other folders)
