<?xml version="1.0"?>
<package>
  <name>lib_vision</name>
  <version>0.0.0</version>
  <description>The lib_vision package</description>

  <maintainer email="des0ps@todo.todo">des0ps</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>lib_atlas</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
