<?xml version="1.0"?>
<package>
  <name>lib_vision</name>
  <version>0.0.0</version>
  <description>The lib_vision package</description>

  <maintainer email="des0ps@todo.todo">des0ps</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sonia_msgs</build_depend>
  <build_depend>lib_atlas</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sonia_msgs</run_depend>
  <run_depend>lib_atlas</run_depend>
</package>
