# \file     CMakeLists.txt
# \author   Thibaut Mattio <thibaut.mattio@gmail.com>
# \date     08/05/2015
# \copyright    2015 Club SONIA AUV, ETS. All rights reserved.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

#catkin_add_gtest(camera_calibration_test server/camera_calibration_test.cc ${provider_vision_FILES})
#target_link_libraries(camera_calibration_test
#    dc1394 pthread
#    ${catkin_LIBRARIES}
#    ${lib_atlas_LIBRARIES}
#    ${sonia_msgs_LIBRARIES}
#    ${provider_vision_LIBRARIES}
#    ${OpenCV_LIBRARIES}
#    yaml-cpp
#    $ENV{GIGEV_DIR}/lib/libGevApi.so.2.0
#    $ENV{GENICAM_ROOT}/bin/Linux64_x64/libNodeMapData_gcc421_v3_0.so
#    $ENV{GENICAM_ROOT}/bin/Linux64_x64/libXmlParser_gcc421_v3_0.so
#    $ENV{GENICAM_ROOT}/bin/Linux64_x64/libGenApi_gcc421_v3_0.so
#    $ENV{GENICAM_ROOT}/bin/Linux64_x64/libGCBase_gcc421_v3_0.so
#    )

